--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4016,7 +4016,11 @@ html
 {
 	scroll-behavior: smooth;
 }
-
+body{
+	margin: 0;
+	padding: 0;
+	font-family: "montserrat",sans-serif;
+  }
 
   .middle{
 	position: absolute;
